--- a/src/components/Cargo/Cargo.module.css
+++ b/src/components/Cargo/Cargo.module.css
@@ -7,20 +7,28 @@
   width: fit-content;
   border-radius: 7px;
   margin-bottom: 3rem;
+  color: #b1b4b9;
 }
 
 .flexbox div {
   padding: 0.5rem 1.5rem;
+  cursor: pointer;
 }
 
-.flexbox div:nth-child(1) {
+/* .flexbox div:nth-child(1) {
   color: #0c44a5;
   border-radius: 5px;
   border: 1px solid #b4b4b4;
   background-color: white;
+} */
+.flexbox div {
+  /* color: #b1b4b9; */
 }
-.flexbox div:nth-child(2) {
-  color: #b1b4b9;
+.active {
+  color: #0c44a5;
+  border-radius: 5px;
+  border: 1px solid #b4b4b4;
+  background-color: white;
 }
 .Header {
   display: flex;
